added vacation charts image and updated projects desc

--- a/app/static/partials/projects.html
+++ b/app/static/partials/projects.html
@@ -15,7 +15,7 @@
                 <span class="github-link"><a href="{{projects.newSite.github}}" target="_blank">Fork me</a></span>
             </p>
             <div class="tools">
-                Tools: Javascript, AngularJS, Require.js, HTML5, Canvas, CSS3, jQuery, Grunt, Bower, Yeoman, Python, Flask, Gunicorn
+                <span class="tech-text">Technology:</span> Javascript, AngularJS, Require.js, HTML5, Canvas, CSS3, jQuery, Grunt, Python, Flask
             </div>
         </div>
     </article>
@@ -23,7 +23,7 @@
     <article id="vacation-charts" class="project">
         <span class="snapshot">
             <a ui-sref="{{projects.vacationCharts.link}}" target="_blank">
-                <img src="images/vacationCharts.png" width="100%" />
+                <img src="images/pie-charts.png" width="100%" />
             </a>
         </span>
         <div class="desc">
@@ -32,11 +32,11 @@
                 <span class="sub-title"><a ui-sref="{{projects.vacationCharts.link}}" target="_blank">Try Me</a></span>
             </div>            
             <p class="detail">
-                Data visualization of vacations my family have traveled over the years represented by pie charts. Chart slices represent vacation locations. A CRUD single page application (SPA) that is powered by an AngularJS front-end and a Flask Rest API.
+                * Currently developing * Data visualization of data (currently vacations but will provide other data options soon) represented by pie charts. A CRUD single page application (SPA) that is powered by an AngularJS front-end and a Flask Rest API.
                 <span class="github-link"><a href="{{projects.vacationCharts.github}}" target="_blank">Fork me</a></span>
             </p>
             <div class="tools">
-                Tools: Javascript, AngularJS, Require.js, HTML5, CSS3, jQuery, Lodash, Grunt, Bower, Yeoman, Python, Flask, Gunicorn
+                <span class="tech-text">Technology:</span> Javascript, AngularJS, Require.js, HTML5, CSS3, jQuery, Underscore.js, Lodash, Grunt, Python, Flask
             </div>
         </div>
     </article>
@@ -53,11 +53,11 @@
                 <span class="sub-title pointer"><a ui-sref="{{projects.connectFour.link}}" target="_blank" data-toggle="modal" data-target="#connect-four-modal">Try Me</a></span>
             </div>            
             <p class="detail">
-                My connect four game implementation in Javascript and jQuery.
+                My implementation of the famous connect four game in Javascript and jQuery.
                 <span class="github-link"><a href="{{projects.connectFour.github}}" target="_blank">Fork me</a></span>
             </p>
             <div class="tools">
-                Tools: Javascript, jQuery
+                <span class="tech-text">Technology:</span> Javascript, jQuery
             </div>
         </div>
     </article>
@@ -66,7 +66,7 @@
             <div class="modal-content">
                 <div class="modal-header">
                     <button type="button" class="close" data-dismiss="modal">x</button>
-                    <h4 class="modal-title">My Connect Four Implementation</h4>
+                    <h4 class="modal-title">My Connect Four</h4>
                 </div>
                 <div class="modal-body">
                     <connect-four></connect-four>       
@@ -91,7 +91,7 @@
                 <span class="github-link"><a href="{{projects.todos.github}}" target="_blank">Fork me</a></span>
             </p>
             <div class="tools">
-                Tools: Javascript, Knockout.js, HTML, CSS, jQuery, Grunt, Bower, Yeoman, Node.js, Express.js, MongoDB, Mongoskin, Require.js
+                <span class="tech-text">Technology:</span> Javascript, Knockout.js, HTML, CSS, jQuery, Grunt, Bower, Yeoman, Node.js, Express.js, MongoDB, Mongoskin, Require.js
             </div>
         </div>
     </article>
@@ -112,7 +112,7 @@
                 <span class="github-link"><a href="{{projects.oldSite.github}}" target="_blank">Fork me</a></span>
             </p>
             <div class="tools">
-                Tools: Javascript, Knockout.js, HTML, Jade, CSS, jQuery, Grunt, Bower, Yeoman, Node.js, Express.js
+                <span class="tech-text">Technology:</span> Javascript, Knockout.js, HTML, Jade, CSS, jQuery, Grunt, Node.js, Express.js
             </div>
         </div>
     </article>
@@ -130,7 +130,7 @@
                 <span class="github-link"><a href="{{projects.spaceDuelGame.github}}" target="_blank">Fork me</a></span>
             </p>
             <div class="tools">
-                Tools: Python, Pygame
+                <span class="tech-text">Technology:</span> Python, Pygame
             </div>
         </div>
     </article>
