--- a/app/static/styles/_home.scss
+++ b/app/static/styles/_home.scss
@@ -70,7 +70,7 @@
 			background-color: bisque;
 		}		
 		#vacation-charts {
-			background-image: url("/images/vacationCharts.png"); 
+			background-image: url("/images/pie-charts.png"); 
 			background-size: 100%;
 			@include imageDefault;
 			.meta {	
