--- a/app/static/styles/_projects.scss
+++ b/app/static/styles/_projects.scss
@@ -117,4 +117,9 @@
         color: red;
         font-size: 18px;
     }
+
+    .tech-text {
+        color: green;
+        font-size: 16px;
+    }
 }
