fixed vacationCharts paths used by require.js

--- a/app/static/partials/projects.html
+++ b/app/static/partials/projects.html
@@ -38,6 +38,7 @@
             <div class="tools">
                 <span class="tech-text">Technology:</span> Javascript, AngularJS, Require.js, HTML5, CSS3, jQuery, Underscore.js, Lodash, Grunt, Python, Flask
             </div>
+            <!-- <pie-charts></pie-charts> -->
         </div>
     </article>
     <hr>
