blindly updating texts to make more generic

--- a/app/static/partials/projects.html
+++ b/app/static/partials/projects.html
@@ -28,7 +28,7 @@
         </span>
         <div class="desc">
             <div class="title">
-                {{chartType}} Charts.
+                Pie-Charting
                 <span class="sub-title"><a ui-sref="{{projects.pieCharts.link}}" target="_blank" data-toggle="modal" data-target="#pie-charts-modal">Try Me</a></span>
             </div>            
             <p class="detail">
@@ -46,7 +46,7 @@
             <div class="modal-content">
                 <div class="modal-header">
                     <button type="button" class="close" data-dismiss="modal">x</button>
-                    <h4 class="modal-title">{{chartType}} Charts</h4>
+                    <h4 class="modal-title">Pie-Charting</h4>
                 </div>
                 <div class="modal-body">
                     <pie-charts></pie-charts>       
