updated all pages on site

--- a/app/static/partials/home.html
+++ b/app/static/partials/home.html
@@ -14,9 +14,9 @@
             </p>
         </div>
         <div id="vacation-charts" class="project desc" ng-mouseover="showInfo('two', true)" ng-mouseleave="showInfo('two', false)">
-            Vacation Charts
+            Pie Charting
             <p class="meta" ng-show="projects.two">
-                Single Page Application that create, display, update, and delete vacation charts. UI powered by Angular and Javascript. REST API written in Python and Flask.
+                CRUD type application providing pie chart data visualizations. UI powered by Angular and Javascript. REST API written in Python and Flask.
             </p>
         </div>
         <div id="connect-four" class="project desc" ng-mouseover="showInfo('three', true)" ng-mouseleave="showInfo('three', false)">
