--- a/app/static/partials/projects.html
+++ b/app/static/partials/projects.html
@@ -20,7 +20,7 @@
         </div>
     </article>
     <hr />
-    <article id="pie-charts" class="project">
+    <article id="pie-charting" class="project">
         <span class="snapshot">
             <a ui-sref="{{projects.pieCharts.link}}" target="_blank" data-toggle="modal" data-target="#pie-charts-modal">
                 <img src="images/pie-charts.png" width="100%" />
@@ -28,11 +28,11 @@
         </span>
         <div class="desc">
             <div class="title">
-                Pie-Charting
+                Pie Charting
                 <span class="sub-title"><a ui-sref="{{projects.pieCharts.link}}" target="_blank" data-toggle="modal" data-target="#pie-charts-modal">Try Me</a></span>
             </div>            
             <p class="detail">
-                * Currently developing * Data visualization of data (currently vacations but will provide other data type options soon) represented by pie charts. A CRUD single page application (SPA) that is powered by an AngularJS front-end and a Flask Rest API.
+                * Currently developing * Data visualization of data (currently vacations but will provide other data type options soon) represented by pie charts. A CRUD type application that is powered by an AngularJS front-end and a Flask Rest API.
                 <span class="github-link"><a href="{{projects.pieCharts.github}}" target="_blank">Fork me</a></span>
             </p>
             <div class="tools">
@@ -41,6 +41,7 @@
             <!-- <pie-charts></pie-charts> -->
         </div>   
     </article>
+    <hr>
     <div id="pie-charts-modal" class="modal fade" tabindex="-1" role="dialog">
         <div class="modal-dialog modal-lg">
             <div class="modal-content">
@@ -54,7 +55,6 @@
             </div>
         </div>
     </div>
-    <hr>
     <article id="connect-four" class="project">
         <span class="snapshot">
             <a class="pointer" ui-sref="{{projects.connectFour.link}}" target="_blank" data-toggle="modal" data-target="#connect-four-modal">
