--- a/app/static/partials/resume.html
+++ b/app/static/partials/resume.html
@@ -3,7 +3,7 @@
 		<span class="title">TECHNOLOGIES</span>
 		<hr />
 		<ul class="languages desc">
-			<li>Angular.js, JavaScript, jQuery, Underscore.js, lodash, HTML5, CSS3, Sass, Bootstrap, Yeoman, Bower, Grunt, Python, Flask, Highcharts, Canvas, Git, Vi </li>
+			<li>JavaScript, Angular.js, jQuery, Underscore.js, lodash, HTML5, CSS3, Sass, Bootstrap, Yeoman, Bower, Grunt, Python, Flask, Highcharts, Canvas, Basic D3.js, Git </li>
 			<li><span class="past-exp set-green">PRIOR EXPERIENCE: </span>Node.js, Express.js, Mustache.js, Knockout.js, Jade, Django, Pygame, C, C++, Shell Scripting, mySQL, MongoDB, Mongoskin</li>
 		</ul>
 	</section>
@@ -62,7 +62,7 @@
 	</section>
 	<div class="more-info pointer">
         <div class="desc">
-            <a class="resume-button" href="../images/Alouise Quiatchon.docx" download="AlouiseQuiatchon.docx">Download Resume</a>
+            <a class="resume-button" href="../images/AlouiseQuiatchon.docx" download="AlouiseQuiatchon.docx">Download Resume</a>
         </div>
     </div>
 </article> 
