--- a/app/static/styles/_contact.scss
+++ b/app/static/styles/_contact.scss
@@ -15,11 +15,16 @@
     float: right;
     width: 200px;
     height: 200px;
+    margin-top: -45px;
 }
 
 .message-form {
     clear: both;
     padding-top: 50px;
+
+    .title {
+        margin-top: 95px;
+    }
 }
 
 .msg-form {
@@ -30,6 +35,7 @@
 
 .google-maps {
     float: right;
+    margin-top: 38px;
 }
 
 .name {
