--- a/app/static/styles/_projects.scss
+++ b/app/static/styles/_projects.scss
@@ -49,12 +49,14 @@
         }
     }
 
-    #vacation-charts {
+    #pie-charting {
+        height: 480px;
+
         .snapshot {
-            top: 15px;
+            top: -10px;
         }
         .desc {
-            top: 75px;
+            top: 105px;
         }
     }
 
