added pic; updated css for pie-charting module; fixed api call issues

--- a/app/static/partials/contact.html
+++ b/app/static/partials/contact.html
@@ -6,7 +6,7 @@
             <p class="address">San Jose, CA</p>
             <p class="email-text">alouiseq@gmail.com</p>
         </div>
-        <img class="self-image" src="../images/Alouise-pic.png" alt="Picture of Me" />
+        <img class="self-image" src="../images/Alouise-pic.jpg" alt="Picture of Me" />
     </article>
     <article class="message-form">
         <hr />
