--- a/app/static/partials/projects.html
+++ b/app/static/partials/projects.html
@@ -23,13 +23,13 @@
     <article id="pie-charting" class="project">
         <span class="snapshot">
             <a ui-sref="{{projects.pieCharts.link}}" target="_blank" data-toggle="modal" data-target="#pie-charts-modal">
-                <img src="images/pie-charts.png" width="100%" />
+                <img class="pointer" src="images/pie-charts.png" width="100%" />
             </a>
         </span>
         <div class="desc">
             <div class="title">
                 Pie Charting
-                <span class="sub-title"><a ui-sref="{{projects.pieCharts.link}}" target="_blank" data-toggle="modal" data-target="#pie-charts-modal">Try Me</a></span>
+                <span class="sub-title pointer"><a ui-sref="{{projects.pieCharts.link}}" target="_blank" data-toggle="modal" data-target="#pie-charts-modal">Try Me</a></span>
             </div>            
             <p class="detail">
                 * Currently developing * Data visualization of data (currently vacations but will provide other data type options soon) represented by pie charts. A CRUD type application that is powered by an AngularJS front-end and a Flask Rest API.
