--- a/app/static/styles/_contact.scss
+++ b/app/static/styles/_contact.scss
@@ -13,8 +13,8 @@
 
 .self-image {
     float: right;
-    width: 200px;
-    height: 200px;
+    // width: 200px;
+    // height: 200px;
     margin-top: -45px;
 }
 
