--- a/app/static/styles/_projects.scss
+++ b/app/static/styles/_projects.scss
@@ -124,4 +124,10 @@
         color: green;
         font-size: 16px;
     }
+
+    #pie-charts-modal {        
+        .modal-lg {
+            height: 500px;
+        }
+    }
 }
