fixed css placement issues for add and udpate slice modals

--- a/app/static/partials/projects.html
+++ b/app/static/partials/projects.html
@@ -32,7 +32,7 @@
                 <span class="sub-title pointer"><a ui-sref="{{projects.pieCharts.link}}" target="_blank" data-toggle="modal" data-target="#pie-charts-modal">Try Me</a></span>
             </div>            
             <p class="detail">
-                * Currently developing * Data visualization of data (currently vacations but will provide other data type options soon) represented by pie charts. A CRUD type application that is powered by an AngularJS front-end and a Flask Rest API.
+                <span style="color:orange;">* Under Development *</span> Data visualization of data (currently vacations but will provide other data type options soon) represented by pie charts. A CRUD type application that is powered by an AngularJS front-end and a Flask Rest API.
                 <span class="github-link"><a href="{{projects.pieCharts.github}}" target="_blank">Fork me</a></span>
             </p>
             <div class="tools">
